--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center">
-                        <h6>Our Best Cybersecurity Solutions</h6>
-                        <h4>SOC & SIEM Solutions</h4>
+                        <h6>Our Solutions</h6>
+                        <h4>Our Best Cybersecurity Solutions</h4>
                     </div>
                 </div>
             </div>
@@ -158,9 +158,9 @@
                         <!-- Product COntent Text -->
                         <div class="product-content-text">
                             <a href="#"> <br> <br>
-                                <h4>Network Security <br>Monitoring Solutions</h4>
+                                <h4>SOC & SIEM Solutions</h4>
                             </a>
-                            <p class="mb-0">Network Monitering detects security risks and responds to intrusions on network infrastructures.</p>
+                            <p class="mb-0">SIEM Monitering detects security risks and responds to intrusions on network infrastructures.</p>
                              <br>
                         </div>
                     </div>
@@ -177,9 +177,9 @@
                         <div class="product-content-text">
                             <a href="#">
                                  <br> <br>
-                                <h4>Application Security <br>Monitoring Solutions</h4>
+                                <h4>NIDS & IPS Solutions</h4>
                             </a>
-                            <p class="mb-0">App monitoring evaluates security threats in an application and improving the app's security.</p>
+                            <p class="mb-0">IDS monitoring evaluates security threats in the network and improving the network security.</p>
                              <br>
                         </div>
                     </div>
@@ -195,9 +195,9 @@
                         <!-- Product COntent Text -->
                         <div class="product-content-text">
                             <a href="#"> <br> <br>
-                                <h4>Cloud Security <br> Monitoring Solutions</h4>
+                                <h4>DevSecOps Solutions</h4>
                             </a>
-                            <p class="mb-0">Cloud monitoring makes it easier to identify patterns and discover potential security risks in the infrastructure.</p> 
+                            <p class="mb-0">DevSecOps solutions makes it easier to identify the potential security risks in the applications.</p> 
                              <br>
                         </div>
                     </div>
@@ -215,7 +215,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center">
-                        <h6>Our Product Features</h6>
+                        <h6>Our SIEM Product Features</h6>
                         <h4>Unique features</h4>
                     </div>
                 </div>
