--- a/product.html
+++ b/product.html
@@ -123,15 +123,17 @@
     </section>
     <!-- Breadcrumb-end -->
 
- 
+  
+
+    
     <!-- We Build Product Area -->
     <div class="we-build-product-area section-padding-100-50" id="product">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center">
-                        <h6>Our Threat Monitoring Solutions</h6>
-                        <h4>SIEM Monitoring Solutions</h4>
+                        <h6>Our Solutions</h6>
+                        <h4>Our Best Cybersecurity Solutions</h4>
                     </div>
                 </div>
             </div>
@@ -147,9 +149,9 @@
                         <!-- Product COntent Text -->
                         <div class="product-content-text">
                             <a href="#"> <br> <br>
-                                <h4>Network Security <br> Monitoring  Solutions</h4>
+                                <h4>SOC & SIEM Solutions</h4>
                             </a>
-                            <p class="mb-0">Network monitoring detects security risks and responds to intrusions on network infrastructures.</p>
+                            <p class="mb-0">SIEM Monitering detects security risks and responds to intrusions on network infrastructures.</p>
                              <br>
                         </div>
                     </div>
@@ -166,9 +168,9 @@
                         <div class="product-content-text">
                             <a href="#">
                                  <br> <br>
-                                <h4>Application Security <br>Monitoring Solutions</h4>
+                                <h4>NIDS & IPS Solutions</h4>
                             </a>
-                            <p class="mb-0">App monitoring evaluates security threats in an application and improving the app's security.</p>
+                            <p class="mb-0">IDS monitoring evaluates security threats in the network and improving the network security.</p>
                              <br>
                         </div>
                     </div>
@@ -184,9 +186,9 @@
                         <!-- Product COntent Text -->
                         <div class="product-content-text">
                             <a href="#"> <br> <br>
-                                <h4>Cloud Security<br> Monitoring Solutions</h4>
+                                <h4>DevSecOps Solutions</h4>
                             </a>
-                            <p class="mb-0">Cloud monitoring makes it easier to identify patterns and discover potential security risks in the infrastructure.</p> 
+                            <p class="mb-0">DevSecOps solutions makes it easier to identify the potential security risks in the applications.</p> 
                              <br>
                         </div>
                     </div>
@@ -196,6 +198,7 @@
     </div>
     <!-- We Build Area -->
 
+
     <!-- We Build Product Area -->
     <div class="we-build-product-area section-padding-100-50" id="product">
         <div class="container">
@@ -203,7 +206,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <h6>Our Best Cybersecurity Solutions</h6>
-                        <h4> Enterprise Security Solutions</h4>
+                        <h4> Enterprise Security Products</h4>
                     </div>
                 </div>
             </div>
@@ -238,7 +241,7 @@
                         <div class="product-content-text">
                             <a href="#">
                                  <br> <br>
-                                <h4>IDS/IPS Threat Protection Solutions</h4>
+                                <h4>AV & Endpoint Protection Solutions</h4>
                             </a>
                             <p class="mb-0">IDS/IPS is a form of network security devices that works to detect and prevent identified threats.</p>
                              <br>
