--- a/product.html
+++ b/product.html
@@ -133,7 +133,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <h6>Our Solutions</h6>
-                        <h4>Our Best Cybersecurity Solutions</h4>
+                        <h4>Our Cyber security Solutions</h4>
                     </div>
                 </div>
             </div>
