--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                                     </div>
                                     <div class="contact-info">
                                         <h5 class="mb-1">Our office address</h5>
-                                        <p class="mb-0">#301, Block B, KP Tower, Arcod Road<br>Vadapalani, Chennai</p>
+                                        <p class="mb-0">#301, Block B, KP Tower, Arcod Road<br>Vadapalani, Chennai, Tamilnadu.</p>
                                     </div>
                                 </div>
                             </div>
