--- a/index.html
+++ b/index.html
@@ -623,9 +623,9 @@
                     <div class="footer-single-widget mb-50">
                         <h4>Products </h4>
                         <ul>
-                            <li><a href="#">Network Monitoring</a></li>
-                            <li><a href="#">Application Monitoring</a></li>
-                            <li><a href="#">Endpoint Monitoring</a></li>
+                            <li><a href="#">SOC & SIEM Solutions</a></li>
+                            <li><a href="#">NIDS & IPS Solutions</a></li>
+                            <li><a href="#">DevSecOps Solutions</a></li>
                           
                         </ul>
                     </div>
