--- a/about.html
+++ b/about.html
@@ -212,13 +212,14 @@
                     <div class="footer-single-widget mb-50">
                         <h4>Products </h4>
                         <ul>
-                            <li><a href="#">Network Monitoring</a></li>
-                            <li><a href="#">Application Monitoring</a></li>
-                            <li><a href="#">Endpoint Monitoring</a></li>
+                            <li><a href="#">SOC & SIEM Solutions</a></li>
+                            <li><a href="#">NIDS & IPS Solutions</a></li>
+                            <li><a href="#">DevSecOps Solutions</a></li>
                           
                         </ul>
                     </div>
                 </div>
+
 
                 <!-- Footer Widget -->
                 <div class="col-sm-6 col-lg-3">
