--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                             <i class="ti-package"></i>
                         </div>
                         <div class="counter-number">
-                            <h3><span class="counter">100</span><span>+</span></h3>
+                            <h3><span class="counter">150</span><span>+</span></h3>
                             <p>Projects</p>
                         </div>
                     </div>
@@ -504,8 +504,8 @@
                             <i class="ti-cup"></i>
                         </div>
                         <div class="counter-number">
-                            <h3><span class="counter">150</span></h3>
-                            <p>Integration</p>
+                            <h3><span class="counter">10</span><span>+</span></h3>
+                            <p>Certifications</p>
                         </div>
                     </div>
                 </div>
@@ -515,7 +515,7 @@
                             <i class="ti-face-smile"></i>
                         </div>
                         <div class="counter-number">
-                            <h3><span class="counter">25</span><span>+</span></h3>
+                            <h3><span class="counter">30</span><span>+</span></h3>
                             <p>Clients</p>
                         </div>
                     </div>
